# py_contact_ms

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
py_contact_ms/: __init__.py  _core.py
